src/styles/styles.scss
@import './base/settings';
@import './base/base';


// #ff7797
@font-face {
    font-family: 'Bubblepop';
    src: url('./fonts/bubblepop.ttf') format('truetype'),

}

@font-face {
    font-family: 'FredokaOne';
    src: url('./fonts/FredokaOne-Regular.ttf') format('truetype'),
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}


.title {
    font-family: 'Bubblepop';
    font-size: 10rem;
    margin: 3rem 0 2rem 0;
}

h2 {
    font-family: 'FredokaOne';
    font-size: 5rem;
}

h3 {
    font-family: 'FredokaOne';
    font-size: 4rem;
    display: inline;
    letter-spacing: 2px;
}


#app {
    display: block;
    margin: auto;
    width: 800px;
    text-align: center;
}

.container {
    width: 80rem;
    height: 100vh;
    margin: auto;
    padding-top: 2rem;
}




.gameboard {
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    width: 42rem;

}

button {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    outline: none;
    border: none;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    margin: auto;
}

.startbtn {
    background-color: #4CAF50;
    font-family: 'FredokaOne';
    font-size: 2.6rem;
    letter-spacing: 1.1px;
    color: white;
    border-radius: 10px;
    border-width: 2px 4px;
    width: 11rem;
    height: 5rem;
    margin-top: 2.5rem;
}

.startbtn:disabled {
    opacity: 0;
}

.circleSize-level1 {
    width: 21rem;
    height: 21rem;
}

.circleSize-level2 {
    width: 14rem;
    height: 14rem;
}

.circleSize-level3 {
    width: 10.5rem;
    height: 10.5rem;
}

.circleSize-level4 {
    width: 8.3rem;
    height: 8.3rem;
}

.circleBtn {
    animation: .2s linear 0s 1 growCircle;
}

// .circleBtn:hover {
//     transform: scale(.6);
// }

@keyframes growCircle {
    0% {
        transform: scale(.3)
    }

    100% {
        transform: scale(1);
    }
}

.feedbackClass {
    opacity: 0;
    font-size: 5rem;
    margin: 1rem 0 2rem 0;
}

.incorrect {
    opacity: 1;
    animation: .5s linear 0s 1 shake;
    font-family: 'FredokaOne';
    color: #ff392e;
}

.correct {
    opacity: 1;
    color: #77DD77;
    font-family: 'FredokaOne';
}

@keyframes shake {
    0% {
        transform: translate(1px, 1px) rotate(0deg);
    }

    10% {
        transform: translate(-1px, -2px) rotate(-1deg);
    }

    20% {
        transform: translate(-3px, 0px) rotate(1deg);
    }

    30% {
        transform: translate(3px, 2px) rotate(0deg);
    }

    40% {
        transform: translate(1px, -1px) rotate(1deg);
    }

    50% {
        transform: translate(-1px, 2px) rotate(-1deg);
    }

    60% {
        transform: translate(-3px, 1px) rotate(0deg);
    }

    70% {
        transform: translate(3px, 1px) rotate(-1deg);
    }

    80% {
        transform: translate(-1px, -1px) rotate(1deg);
    }

    90% {
        transform: translate(1px, 2px) rotate(0deg);
    }

    100% {
        transform: translate(1px, -2px) rotate(-1deg);
    }
}

.timerBtn {
    width: 7rem;
    height: 7rem;
}

.scoreTime {
    display: flex;
    justify-content: space-between;
}



//REACT MODAL ===============================================

.ReactModalPortal>div {
    opacity: 0;
}

.ReactModalPortal .ReactModal__Overlay {
    display: flex;
    justify-content: center;
    align-items: center;
    transition: opacity 200ms ease-in-out;
}

.ReactModalPortal .ReactModal__Overlay--after-open {
    transition: opacity 200ms ease-in-out;
    opacity: 1;
}

.ReactModalPortal .ReactModal__Overlay--before-close {
    opacity: 0;
}

.modal {
    background: #001226;
    color: white;
    font-size: 3.2rem;
    max-width: 35rem;
    outline: none;
    padding: 5rem 4rem 6.5rem 4rem;
    border: solid white 2px;
}

.modal__score {
    font-family: 'FredokaOne';
    text-align: center;
    margin: 2rem 0;

}

.modal__startbtn {
    display: block;
    margin: auto;
    padding: 1rem 0 4rem 0;
}

.title--gameover {
    font-size: 7rem;
    font-family: 'Bubblepop';
    margin: 2rem auto;
    text-align: center;
}

.title--howtoplay,
.title--top5modal {
    font-size: 4rem;
    font-family: 'Bubblepop';
    margin: auto;
    margin-bottom: 2rem;
    text-align: center;
    display: inline-block;
    width: 25rem;
}

.title--top5modal {
    font-size: 5.5rem;
    margin-bottom: 1rem;
}

.modal--howtoplay,
.modal--top5 {
    padding: 2rem;
    background: #001226;
    color: white;
    font-size: 3.2rem;
    max-width: 35rem;
    height: 42rem;
    outline: none;
    border: solid white 2px;
}

.modal--top5 {
    height: 60rem;
}

.button--top5modal {
    height: 5rem;
    margin: auto;
    display: block;
}

.header--howtoplay {
    display: flex;
}

.paragraph--howtoplay {
    font-size: 2.2rem;
    font-family: 'Helvetica';
    margin-bottom: 2rem;
}

.button--howtoplay {
    background-color: transparent;
    color: white;
}

.htpbutton {
    display: block;
    background-color: #ff3a2f;
    font-family: 'FredokaOne';
    font-size: 2.4rem;
    letter-spacing: 1.1px;
    color: white;
    margin: 15rem auto 0 auto;
    border-radius: 10px;
    border-width: 2px 4px;
    width: 11rem;
    height: 7rem;
}

.usernameInput {
    width: 11.5rem;
    margin: 2rem auto 1.5rem auto;
    outline: none;
    display: block;
    background-color: transparent;
    color: white;
    height: 4rem;
    border: 2px solid white;
}

.list--top5modal {
    font-size: 2.8rem;
    text-align: center;
    width: 20rem;
    margin: 0 auto 1rem auto;
}

.score--top5modal {
    font-size: 3rem;
    margin: 0 auto 1rem auto;
    text-align: center;
    letter-spacing: 2px;
}


@media (max-width: 480px) {

    #app {
        display: block;
        margin: auto;
        width: 30rem;
        height: 80vh;
        text-align: center;
    }

    .container {
        padding: 1rem;
        width: 30rem;
        height: 80vh;
    }

    .title {
        margin: 1rem 0 .5rem 0;
        font-size: 6.5rem;
    }

    h3 {
        font-size: 2.3rem;
        margin: 1rem 0 0 0;
        letter-spacing: 1.5px;
    }

    .startbtn {
        display: block;
        margin-top: 2rem;
        font-size: 2rem;
        width: 8rem;
        height: 4rem;
    }

    .htpbutton {
        display: block;
        background-color: #ff3a2f;
        font-family: 'FredokaOne';
        font-size: 1.7rem;
        letter-spacing: 1.1px;
        color: white;
        margin: 6rem auto 2rem auto;
        border-radius: 10px;
        border-width: 2px 4px;
        width: 8rem;
        height: 5rem;
    }

    .modal__startbtn {
        display: block;
        margin: auto;
        padding: 1rem 0;
        height: 4.5rem;
    }


    .gameboard {
        width: 30rem;
        margin: 0;
    }

    .feedbackClass {
        margin: 2rem 0;
        font-size: 2.5rem;
    }


    .circleSize-level1 {
        width: 14.5rem;
        height: 14.5rem;
    }

    .circleSize-level2 {
        width: 9.5rem;
        height: 9.5rem;
    }

    .circleSize-level3 {
        width: 7.2rem;
        height: 7.2rem;
    }

    .circleSize-level4 {
        width: 5.8rem;
        height: 5.8rem;
    }

    .button--top5modal {
        height: 6rem;
        margin: auto;
        display: block;
    }

}

